# bess-sizing-copilot

./: .gitignore  CHANGELOG.md  README.md
agent/: .env.example  README.md  agent_v1.py  api_server.py  pdf_generator.py  perfis.py  prompts.py  rag.py  requirements.txt  storage.py  streamlit_app.py  tools.py
agent/regulamentos/: LEI_14300_2022.md  NBR_13534.md  README.md  REH_3477_2025_ENEL_SP_A4_VERDE.md  REN_1000_2021.md
bess-core/: README.md  pyproject.toml  pytest.ini  requirements.txt
bess-core/bess_core/: __init__.py  degradacao.py  despacho.py  dimensionamento.py  financeiro.py
bess-core/tests/: casos_reais.py  conftest.py  test_degradacao.py  test_despacho.py  test_dimensionamento.py  test_financeiro.py  test_monte_carlo.py
docs/: CASOS_VALIDACAO.md  CASO_REAL_INDUSTRIA_SP.md  MEMORIAL_DEGRADACAO.md  MEMORIAL_DESPACHO.md  MEMORIAL_DIMENSIONAMENTO.md  MEMORIAL_FINANCEIRO.md  SETUP_SUPABASE.md  linkedin_post_v0.8.0.md
frontend/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/sessions/: route.ts
frontend/src/app/api/sessions/[id]/relatorio-pdf/: route.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx  ToolCallExpander.tsx
frontend/src/lib/: api.ts  supabase.ts  types.ts  utils.ts
scripts/: init-git.ps1
supabase/migrations/: 0001_init.sql
